2002-10-18  Darin Adler  <darin@apple.com>

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge stringByEvaluatingJavaScriptFromString:]):
	Changed to return a string and changed name.

2002-10-18  David Hyatt  <hyatt@apple.com>

	The collapsing margin rewrite. Also fixes a bug where
	we stay in quirks mode for strict HTML4 dtds when we
	shouldn't.
	
        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::determineParseMode):
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layout):
        (RenderFlow::layoutBlockChildren):
        * khtml/rendering/render_flow.h:
        * khtml/rendering/render_object.h:

2002-10-18  Darin Adler  <darin@apple.com>

        * Makefile.am: Move dependency so clean happens before build.

2002-10-17  Richard Williamson  <rjw@apple.com>

        Support for drawing frame borders and frame resizing. (fixes 2982466).

        * khtml/rendering/render_frames.cpp:
        (RenderFrameSet::userResize):
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge frameBorderStyle]):
        * kwq/qt/qframe.h:

2002-10-17  Darin Adler  <darin@apple.com>

	- fixed 2807340 -- Alex is case sensitive for anchors, but
	should not be in quirks mode (other browsers aren't)

        * khtml/dom/html_misc.cpp: Touched this file to prevent us from requiring a
	full build. Damned header dependencies still don't work right.

        * khtml/html/html_miscimpl.h: Add caseSensitive parameters.
        * khtml/html/html_miscimpl.cpp:
        (HTMLCollectionImpl::getNamedItem): Add caseSensitive parameter, and compare
	by converting both to lower case if it's false and pass it on when recursing.
        (HTMLCollectionImpl::namedItem): Pass along a caseSensitive parameter.
        (HTMLFormCollectionImpl::getNamedItem): Pass along a caseSensitive parameter.
        (HTMLFormCollectionImpl::getNamedFormItem): Pass along, and handle, it.